src/test/ui-fulldeps/plugin-as-extern-crate.stderr
error: compiler plugin used as an ordinary library
  --> $DIR/plugin-as-extern-crate.rs:10:1
   |
LL | extern crate attr_plugin_test;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/plugin-as-extern-crate.rs:7:9
   |
LL | #![deny(plugin_as_library)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

